--- a/__main__.tex
+++ b/__main__.tex
@@ -102,8 +102,8 @@ Contact: \href{jesus.villota@cemfi.edu.es}{jesus.villota@cemfi.edu.es}.
 %----------------------------------------------------
 
 %%%%%%%%%%%%%%%%% HIGH FREQUENCY %%%%%%%%%%%%%%%%%%%%%%
-%\section{High Frequency Analysis}
-%\input{txt_HF_Analysis.tex}
+\section{High Frequency Analysis}
+\input{txt_HF_Analysis.tex}
 
 %%%%%%%%%%%%%%%%% EVENT STUDY %%%%%%%%%%%%%%%%%%%%%%
 %\section{Event Study}
