Update w/ Julio Crego's comments

--- a/LLM_Business_News_Parsing/__main__.tex
+++ b/LLM_Business_News_Parsing/__main__.tex
@@ -17,18 +17,15 @@
 }}
 
 \author[1]{
-{ \bx \bx \bx 
-%Jesus Villota-Miranda
+{ \bx \bx \bx Jesus Villota Miranda}\footnote{
+%\textsc{PhD} Student at 
+\textsc{Cemfi} (Madrid, Spain). 
+%Advisor: Enrique Sentana. 
+Contact: \href{jesus.villota@cemfi.edu.es}{jesus.villota@cemfi.edu.es}.
+%I am grateful to everyone that contributed to the three discussions from my presentations. I acknowledge funding from the Bank of Spain to study this master's degree.
 }
-%\footnote{
-%%\textsc{PhD} Student at 
-%\textsc{Cemfi} (Madrid, Spain). 
-%%Advisor: Enrique Sentana. 
-%Contact: \href{jesus.villota@cemfi.edu.es}{jesus.villota@cemfi.edu.es}.
-%%I am grateful to everyone that contributed to the three discussions from my presentations. I acknowledge funding from the Bank of Spain to study this master's degree.
-%}
-%%\footnote{I would like to express my deepest gratitude to the Bank of Spain for their generous funding and support of my master's studies at \textsc{Cemfi}. 
-%%I am also grateful to my advisor, colleagues, and family for their continuous support and encouragement throughout this journey.}
+%\footnote{I would like to express my deepest gratitude to the Bank of Spain for their generous funding and support of my master's studies at \textsc{Cemfi}. 
+%I am also grateful to my advisor, colleagues, and family for their continuous support and encouragement throughout this journey.}
 }
 
 %\author[2]{Matías Covarrubias}
@@ -111,8 +108,8 @@
 %\input{txt_Event_Study.tex}
 
 %%%%%%%%%%%%%%%%% TRANSACTION COSTS %%%%%%%%%%%%%%%%%%%%%%
-%\section{Transaction Costs}
-%\input{txt_Transaction_Costs.tex}
+\section{Transaction Costs}
+\input{txt_Transaction_Costs.tex}
 
 
 %%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
