--- a/LLM_Business_News_Parsing/txt__ABSTRACT.tex
+++ b/LLM_Business_News_Parsing/txt__ABSTRACT.tex
@@ -1,4 +1,4 @@
-\begin{abstract}
+%\begin{abstract}
 
 In this paper, we explore the incorporation of information in the stock market by building a trading strategy that trades clusters of news. First, we construct the clusters by applying KMeans to the vector embedding representations of the articles. We then propose two algorithms that select \textit{in-sample} the most profitable clusters for trading and project them \textit{out-of-sample} to evaluate the performance of the trading strategy. 
 %\mx 
@@ -7,4 +7,5 @@ In the second part, we perform the clustering by feeding the news articles to a 
 The results show an inconsistent earnings profile in the test set for the KMeans clustering, while the LLM clustering is able to exploit the information of the articles in a profitable way, creating a consistent earnings profile. These results are robust to hyperparameter variability, such as the number of periods in the holding window and the upper bound on the number of traded clusters. 
 
 % In this paper, we investigate the influence of business news on stock market prices through the lens of large language models (LLMs). Leveraging the capabilities of the GPT API, we parse and analyze business news to generate predictions regarding stock market movements of the affected firms. By contrasting these predictions with actual stock price fluctuations, we assess the accuracy and efficacy of language models in predicting market trends. Through rigorous empirical analysis, we uncover the nuances of how business news shapes investor sentiment and market dynamics, shedding light on the interplay between textual information and financial markets. Our findings not only contribute to the growing literature on textual analysis in finance but also offer insights for investors, policymakers, and practitioners seeking to navigate the complexities of modern financial markets.
-\end{abstract}
+
+%\end{abstract}
