--- a/LLM_Business_News_Parsing/txt_Model_LLM.tex
+++ b/LLM_Business_News_Parsing/txt_Model_LLM.tex
@@ -101,15 +101,17 @@ The output provided by the LLM comprises two parts: a \qquote{Structured output}
 \textbf{1) Structured Output: }
 \begin{table}[H]
 \centering
-\begin{tabular}{|c|c|c|c|c|}
-\hline 
-\rowcolor{gray!10}
+%\begin{tabular}{|c|c|c|c|c|}
+\begin{tabular}{ccccc}
+\hline \Xhline{2\arrayrulewidth}
+%\rowcolor{gray!10}
 \texttt{firm} & \texttt{ticker} & \texttt{shock\_type} & \texttt{shock\_magnitude} & \texttt{shock\_direction}
 \\ \hline \Xhline{2\arrayrulewidth} 
 Cellnex Telecom & CLNX.MC & supply & minor & negative
 \\ 
 Telefónica & TEF.MC & financial & minor & positive
-\\ \hline 
+\\ 
+\hline \Xhline{2\arrayrulewidth}
 \end{tabular}
 \end{table}
 
