--- a/LLM_Business_News_Parsing/txt_introduction.tex
+++ b/LLM_Business_News_Parsing/txt_introduction.tex
@@ -1,3 +1,32 @@
+%----------------------------------------------------
+% 18 September 2024 | New introduction for submission to JBF
+%----------------------------------------------------
+
+In financial markets, the ability to efficiently process and react to new information is fundamental. Markets are constantly processing vast amounts of data, much of which stems from media coverage that reports on firm-specific events, macroeconomic developments, and geopolitical shocks. Historically, understanding how news influences stock prices has been a central concern in finance research. The Efficient Market Hypothesis (EMH) posits that markets reflect all available information, including news, instantaneously and efficiently (Fama, 1970). However, both theoretical and empirical studies have shown that this process is not always immediate or efficient, particularly when news is complex or ambiguous (Klibanoff, Lamont \& Wizman, 1998).
+
+The role of media in driving market reactions has been well documented. Early work by Tetlock (2007) demonstrated that negative words in news articles could predict declines in stock prices, laying the foundation for textual analysis in finance. Building on this, Fang and Peress (2009) explored the relationship between media coverage and stock returns, showing that firms with less media coverage tend to generate higher future returns. These studies established the connection between textual content and market behavior, particularly through sentiment analysis. However, sentiment alone may not fully capture the complexity of news content, as Jegadeesh and Wu (2013) emphasized by demonstrating the importance of refining textual analysis to capture nuanced information.
+
+Traditional models of market reactions have relied heavily on structured data like earnings reports, which are easier to quantify. However, the richness of unstructured data-like news articles-has increasingly attracted attention. Studies such as those by Bollen et al. (2011) on social media sentiment and Barber & Odean (2008) on investor behavior highlight the expanding role of sentiment in understanding market trends. Yet, sentiment-based approaches, while informative, often fail to capture the economic implications of news in its full complexity.
+
+Recent advancements in machine learning, particularly in NLP, have opened up new possibilities for more granular analysis of news content. Studies like Bybee et al. (2021) employed Latent Dirichlet Allocation (LDA) to distilling news articles into thematic categories. Their findings demonstrated that shifts in thematic attention correlate closely with macroeconomic activity, explaining a significant portion of aggregate stock market returns. However, the limitation of their approach, which uses a bag-of-words model, is that it overlooks the contextual and syntactic nuances of language. In contrast, newer techniques such as those employed in this paper, leveraging the capabilities of Large Language Models (LLMs), preserve these nuances, allowing for a more precise understanding of how news content influences individual stock prices.
+
+While much of the existing literature has concentrated on sentiment-based approaches (Engle, 2019; Garcia, 2013), this paper seeks to push the boundaries by applying advanced NLP techniques to extract deeper insights from news articles. Specifically, we investigate whether clustering news articles based on their economic implications-such as demand, supply, financial, policy, and technology shocks-, rather than simply their sentiment, can enhance the predictive power of trading strategies. By employing clustering methods such as KMeans, which groups news articles based on text embeddings, and Large Language Models (LLMs), which classify articles using a predefined schema to detect firm-specific shocks, we aim to offer a more nuanced approach that captures the economic relevance of news to particular firms.
+
+The key distinction between these approaches lies in the level of understanding they offer. KMeans clustering relies on unsupervised grouping based on article embeddings, capturing broad similarities in textual content. In contrast, LLM-based clustering involves a structured analysis of the news, where the model is explicitly tasked with classifying the shocks that affect specific firms. This deeper parsing results in clusters that are more stable across time and splits, generating cleaner trading signals that are more economically interpretable.
+
+The integration of LLMs has seen growing adoption in finance, as demonstrated by Chen et al. (2022), who explore LLM-based market timing strategies. However, they relied on outdated models like BERT and RoBERTa, which limit adaptability. In contrast, our approach employs cutting-edge models (e.g., LLaMA-3, released in 2024) and function-calling to extract firm-specific news signals, ensuring higher relevance for market predictions. Similarly, while Lopez-Lira and Tang (2023) used ChatGPT to predict stock price movements based on news headlines, their analysis was confined to simplistic classifications of headline sentiment. Our methodology, which parses entire news articles rather than headlines, captures deeper economic context and generates more actionable trading signals. 
+
+Moreover, works like Bybee (2023) show that LLMs can be effective tools for generating economic beliefs from historical news data. While his analysis focused on replicating survey-based economic expectations, our paper adopts a more targeted approach by focusing on firm-specific news impacts, offering practical applications for investors. Similarly, Scherbina and Schlusche (2016) identified how news stories reveal economic linkages between firms, finding that linked firms cross-predict one another's returns. This highlights the broader relevance of news in forecasting firm performance, a theme we expand upon by clustering news based on specific economic shocks.
+
+The novelty of this paper, therefore, lies in demonstrating how a deeper understanding of news articles, facilitated by LLMs, can lead to more stable clusters, improved signal clarity, and enhanced out-of-sample performance. Our findings suggest that LLM-based clustering of news provides a more structured and economically relevant lens through which market participants can interpret news, offering a potential edge in constructing profitable trading strategies.
+
+The ability to identify firm-specific impacts in a structured manner is critical, as Hilt & Schwenkler (2024) argue that networks of firm linkages-extracted from news-are crucial for understanding firm-level and aggregate risks. Our use of LLMs aligns with this line of research, offering a scalable and consistent methodology to parse news and generate actionable insights. Finally, while previous studies like Chen (2023) focused on market-level predictions from headlines, our firm-level approach allows for greater granularity, improving the precision of market timing strategies.
+
+In conclusion, this paper builds on the foundation of textual analysis in finance, extending it into the realm of advanced NLP and LLMs. By parsing news into economic shocks and clustering articles accordingly, we demonstrate that LLM-based clustering methods outperform traditional approaches in generating cleaner, more stable signals for trading strategies. This contributes to a growing body of literature that seeks to understand how unstructured data, particularly news, can be harnessed to predict market movements with greater accuracy and nuance.
+
+%While much of the literature has focused on sentiment-based approaches (Engle, 2019; Garcia, 2013), we seek to contribute to a growing field of research that applies advanced NLP techniques to extract deeper insights from news content. Specifically, we investigate whether clustering news articles based on their economic implications, rather than simply their sentiment, can enhance the predictive power of trading strategies. By employing clustering techniques such as KMeans on text embeddings and Large Language Models (LLMs), we can offer a more nuanced approach that captures the economic relevance of news to particular firms.
+%
+%The novelty of this paper lies in the comparison of clustering methods based on two distinct approaches: traditional KMeans clustering on text embeddings, and clustering based on Large Language Models (LLMs), which offer a deeper, more structured understanding of the news content. By allowing the LLM to parse articles and classify them according to shock types, we argue that the resulting clusters are more stable over time, produce cleaner trading signals, and ultimately lead to better out-of-sample performance. This approach provides a more structured, economically-relevant lens through which market participants can interpret news, offering a potential edge in constructing a profitable trading strategy.
 
 
 %----------------------------------------------------
