Adding Literature Networks (folder)

--- a/LLM_Business_News_Parsing/tab_GPT_functions_summary.tex
+++ b/LLM_Business_News_Parsing/tab_GPT_functions_summary.tex
@@ -13,17 +13,17 @@
 \hline \Xhline{2\arrayrulewidth} 
 \multicolumn{2}{l}{1. \texttt{firms}} & \qquote{List all the firms affected by the events narrated in the article} & \texttt{array} \tabularnewline
 \hline
- & 1.1. \texttt{firm} & \qquote{Iterate over each firm in \texttt{firms}} & \texttt{string}
+ & 1.1. \texttt{firm} & \qquote{Iterate over each \textnormal{\texttt{firm}} in \textnormal{\texttt{firms}}} & \texttt{string}
  \tabularnewline
 \cline{2-4} \cline{3-4} \cline{4-4} 
- & 1.2. \texttt{ticker} & \qquote{State the stock market ticker of this firm} & \texttt{string}
+ & 1.2. \texttt{ticker} & \qquote{State the stock market ticker of \textnormal{\texttt{firm}} } & \texttt{string}
  \tabularnewline
 \cline{2-4} \cline{3-4} \cline{4-4} 
- & 1.3. \texttt{shock\_type} & \qquote{What type of shock does the article imply on this firm?} & \{demand, supply, financial, \newline technology, policy\}\tabularnewline
+ & 1.3. \texttt{shock\_type} & \qquote{What type of shock does this article imply on \textnormal{\texttt{firm}} ?} & \{demand, supply, financial, \newline technology, policy\}\tabularnewline
 \cline{2-4} \cline{3-4} \cline{4-4} 
- & 1.4. \texttt{shock\_magnitude} & \qquote{How much impact is the shock expected to have on this firm?} & \{minor, major\}\tabularnewline
+ & 1.4. \texttt{shock\_magnitude} & \qquote{How much impact is this shock expected to have on \textnormal{\texttt{firm}}?} & \{minor, major\}\tabularnewline
 \cline{2-4} \cline{3-4} \cline{4-4} 
- & 1.5. \texttt{shock\_direction} & \qquote{In what direction is the shock expected to impact this firm?} & \{positive, negative\}\tabularnewline 
+ & 1.5. \texttt{shock\_direction} & \qquote{In what direction is this shock expected to impact \textnormal{\texttt{firm}}?} & \{positive, negative\}\tabularnewline 
 %\cline{2-4} \cline{3-4} \cline{4-4} 
 \hline \Xhline{2\arrayrulewidth}
 \end{tabular}
