--- a/LLM_Business_News_Parsing/txt_introduction.tex
+++ b/LLM_Business_News_Parsing/txt_introduction.tex
@@ -6,7 +6,7 @@ In financial markets, the ability to efficiently process and react to new inform
 
 The role of media in driving market reactions has been well documented. Early work by Tetlock (2007) demonstrated that negative words in news articles could predict declines in stock prices, laying the foundation for textual analysis in finance. Building on this, Fang and Peress (2009) explored the relationship between media coverage and stock returns, showing that firms with less media coverage tend to generate higher future returns. These studies established the connection between textual content and market behavior, particularly through sentiment analysis. However, sentiment alone may not fully capture the complexity of news content, as Jegadeesh and Wu (2013) emphasized by demonstrating the importance of refining textual analysis to capture nuanced information.
 
-Traditional models of market reactions have relied heavily on structured data like earnings reports, which are easier to quantify. However, the richness of unstructured data-like news articles-has increasingly attracted attention. Studies such as those by Bollen et al. (2011) on social media sentiment and Barber & Odean (2008) on investor behavior highlight the expanding role of sentiment in understanding market trends. Yet, sentiment-based approaches, while informative, often fail to capture the economic implications of news in its full complexity.
+Traditional models of market reactions have relied heavily on structured data like earnings reports, which are easier to quantify. However, the richness of unstructured data-like news articles-has increasingly attracted attention. Studies such as those by Bollen et al. (2011) on social media sentiment and Barber \& Odean (2008) on investor behavior highlight the expanding role of sentiment in understanding market trends. Yet, sentiment-based approaches, while informative, often fail to capture the economic implications of news in its full complexity.
 
 Recent advancements in machine learning, particularly in NLP, have opened up new possibilities for more granular analysis of news content. Studies like Bybee et al. (2021) employed Latent Dirichlet Allocation (LDA) to distilling news articles into thematic categories. Their findings demonstrated that shifts in thematic attention correlate closely with macroeconomic activity, explaining a significant portion of aggregate stock market returns. However, the limitation of their approach, which uses a bag-of-words model, is that it overlooks the contextual and syntactic nuances of language. In contrast, newer techniques such as those employed in this paper, leveraging the capabilities of Large Language Models (LLMs), preserve these nuances, allowing for a more precise understanding of how news content influences individual stock prices.
 
@@ -20,7 +20,7 @@ Moreover, works like Bybee (2023) show that LLMs can be effective tools for gene
 
 The novelty of this paper, therefore, lies in demonstrating how a deeper understanding of news articles, facilitated by LLMs, can lead to more stable clusters, improved signal clarity, and enhanced out-of-sample performance. Our findings suggest that LLM-based clustering of news provides a more structured and economically relevant lens through which market participants can interpret news, offering a potential edge in constructing profitable trading strategies.
 
-The ability to identify firm-specific impacts in a structured manner is critical, as Hilt & Schwenkler (2024) argue that networks of firm linkages-extracted from news-are crucial for understanding firm-level and aggregate risks. Our use of LLMs aligns with this line of research, offering a scalable and consistent methodology to parse news and generate actionable insights. Finally, while previous studies like Chen (2023) focused on market-level predictions from headlines, our firm-level approach allows for greater granularity, improving the precision of market timing strategies.
+The ability to identify firm-specific impacts in a structured manner is critical, as Hilt \& Schwenkler (2024) argue that networks of firm linkages-extracted from news-are crucial for understanding firm-level and aggregate risks. Our use of LLMs aligns with this line of research, offering a scalable and consistent methodology to parse news and generate actionable insights. Finally, while previous studies like Chen (2023) focused on market-level predictions from headlines, our firm-level approach allows for greater granularity, improving the precision of market timing strategies.
 
 In conclusion, this paper builds on the foundation of textual analysis in finance, extending it into the realm of advanced NLP and LLMs. By parsing news into economic shocks and clustering articles accordingly, we demonstrate that LLM-based clustering methods outperform traditional approaches in generating cleaner, more stable signals for trading strategies. This contributes to a growing body of literature that seeks to understand how unstructured data, particularly news, can be harnessed to predict market movements with greater accuracy and nuance.
 
