--- a/LLM_Business_News_Parsing/bib_references.bib
+++ b/LLM_Business_News_Parsing/bib_references.bib
@@ -262,3 +262,36 @@
   journal={arXiv preprint arXiv:2302.13971},
   year={2023}
 }
+
+@article{chan2003stock,
+  title={Stock price reaction to news and no-news: drift and reversal after headlines},
+  author={Chan, Wesley S},
+  journal={Journal of financial economics},
+  volume={70},
+  number={2},
+  pages={223--260},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{jegadeesh1993returns,
+  title={Returns to buying winners and selling losers: Implications for stock market efficiency},
+  author={Jegadeesh, Narasimhan and Titman, Sheridan},
+  journal={The Journal of finance},
+  volume={48},
+  number={1},
+  pages={65--91},
+  year={1993},
+  publisher={Wiley Online Library}
+}
+
+@article{jiang2021pervasive,
+  title={Pervasive underreaction: Evidence from high-frequency data},
+  author={Jiang, Hao and Li, Sophia Zhengzi and Wang, Hao},
+  journal={Journal of Financial Economics},
+  volume={141},
+  number={2},
+  pages={573--599},
+  year={2021},
+  publisher={Elsevier}
+}
