Start writing about News-implied firm networks

--- a/LLM_Business_News_Parsing/txt_Model_KMeans.tex
+++ b/LLM_Business_News_Parsing/txt_Model_KMeans.tex
@@ -988,8 +988,8 @@ TR_{L, \theta}\angl{(i,j),  d}
 ~.
 $$
 }
-This produces an equally-weighted rolling-portfolio similar to \cite{jegadeesh1993returns}.
-As in \cite{chan2003stock}, the overlapping returns of the portfolio at $d\in\tilde{\mathfrak{d}}$ can be obtained as an average of the abnormal returns weighted by the trading rule, which determines the direction of each position (long or short), and scaled by the number of open positions in that day
+This produces an equally-weighted rolling-portfolio similar to \cite{jegadeesh1993returns} and \cite{chan2003stock}.
+The overlapping returns of the portfolio at $d\in\tilde{\mathfrak{d}}$ can be obtained as an average of the abnormal returns weighted by the trading rule, which determines the direction of each position (long or short), and scaled by the number of open positions in that day:
 $$
 r_{d}^{\mathcal{P}} 
 := 
